--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "robodex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https//mirzayevfarid.github.io/robodex",
+  "homepage": "https://mirzayevfarid.github.io/robodex",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "react": "^16.10.2",
